# miao

./: Cargo.toml  memory.x  openocd.cfg  prehooks.rhai
.cargo/: config.toml
blinky/: Cargo.toml
blinky/src/: main.rs
blinky/src/system/: resources.rs  status.rs
blinky/src/tasks/blinky/: mod.rs
buzzer/: Cargo.toml
buzzer/src/: main.rs
buzzer/src/system/: resources.rs
buzzer/src/tasks/buzzer/: canon.rs  mod.rs  typedef.rs
imu/: Cargo.toml  Embed.toml
imu/src/: main.rs
imu/src/system/: resources.rs  status.rs
imu/src/tasks/blinky/: mod.rs
imu/src/tasks/bmi088/: mod.rs  typedef.rs
utils/: Cargo.toml
utils/src/: init.rs  lib.rs  macros.rs
{{crate_name}}/: Cargo.toml
{{crate_name}}/src/controller/: mod.rs
{{crate_name}}/src/tasks/blinky/: mod.rs
