[package]
name  = "imu"
build = "build.rs"

authors.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

autobenches  = false
autoexamples = false
autotests    = false


[dependencies]

libm = { version = "0.2", default-features = false }
ahrs = { version = "0.8", default-features = false }

nalgebra = { version = "0.34", features = ["defmt"], default-features = false }

utils.workspace = true
defmt.workspace = true

cortex-m-rt.workspace      = true
assign-resources.workspace = true
embassy-executor.workspace = true


[build-dependencies]
cargo-emit = "0.2"
